got update movie and delete movie working

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,3 +88,16 @@ body {
   background-color: green;
   color: white;
 }
+
+.delete-button {
+  position: absolute;
+  top: 100px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+.delete-button:hover {
+  background-color: green;
+  color: white;
+}
